--- a/index.html
+++ b/index.html
@@ -6,6 +6,68 @@
 </head>
 <body>
 	<div class="container">
+
+		<h1>HELE FONTALVO</h1>
+	<h2>introduccion</h2>
+	<p>Hola, buenas soy helen Fontalvo,soy una persona amable respetuosa , capaz de enseñar y aprender de los demas </p>
+	<hr>
+	<h2>hoja de vida</h2>
+	<h4>nombre</h4>
+	<p>helen Fontalvo</p>
+	<h4>cedula de ciudadania</h4>
+    <p>1102357819</p>
+    <h4>edad y nacionalidad</h4>
+    <p>36 años, colombiano</p>
+    <h4>direccion</h4>
+    <p>Carrera 18A Nº 70-34 Barrio el Socorro Gaira Santa Marta</p>
+    <h4>telefono</h4>
+    <p>3247300461</p>
+    <h4>email</h4>
+    <p>helenfontalvo17@gmail.com</p>
+    <img src="helen.jpeg" width="10%"> <br>
+
+    <a href="https://www.facebook.com/mario.fontalvo.50309"> faceboock</a>
+    <hr>
+    <h3>pasatiempos</h3>
+    <ul>
+    	<li>documentales y peliculas</li>
+    	<li>jugar futbol</li>
+    	<li>ir a playa</li>
+    </ul>
+    <h3>tareas pendientes</h3>
+    <ol>
+    	<li>hacer aseo</li>
+    	<li>terminar el laboratorio</li>
+    	<li>lavar los platos</li>
+    	<li>organizar la ropa</li>
+    	<li>salir a entrenar</li>
+    </ol>
+    <table border="">
+    	<thead>
+    	<tr>
+    		<th>lunes</th>
+    		<th>martes</th>
+    		<th>miercoles</th>
+    		<th>jueves</th>
+    		<th>viernes</th>
+    		<th>sabado</th>
+    		<th>domingo</th>
+    	</tr>
+        </thead>
+        <tbody>
+        	<tr>
+        	  <td> hacer aseo</td>
+        	  <td>salir a entrenar</td>
+              <td></td>
+              <td>terminar el laboratorio</td>
+              <td></td>
+              <td>lavar los platos</td>
+              <td>organizar la ropa</td>
+        	</tr>
+        </tbody>
+    </table>
+
+
 		<form>
 			<h1>formulario de contacto</h1>
 			<label>* nombre:</label>
