--- a/index.html
+++ b/index.html
@@ -1,99 +1,117 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-	<title>formulario 2</title>
-	<link rel="stylesheet" type="text/css" href="estilos.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formulario de Contacto</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-	<div class="container">
 
-		<h1>HELE FONTALVO</h1>
-	<h2>introduccion</h2>
-	<p>Hola, buenas soy helen Fontalvo,soy una persona amable respetuosa , capaz de enseñar y aprender de los demas </p>
-	<hr>
-	<h2>hoja de vida</h2>
-	<h4>nombre</h4>
-	<p>helen Fontalvo</p>
-	<h4>cedula de ciudadania</h4>
-    <p>1102357819</p>
-    <h4>edad y nacionalidad</h4>
-    <p>36 años, colombiano</p>
-    <h4>direccion</h4>
-    <p>Carrera 18A Nº 70-34 Barrio el Socorro Gaira Santa Marta</p>
-    <h4>telefono</h4>
-    <p>3247300461</p>
-    <h4>email</h4>
-    <p>helenfontalvo17@gmail.com</p>
-    <img src="helen.jpeg" width="10%"> <br>
+    <div class="container">
+        <header>
+            <h1>Helen Fontalvo</h1>
+            <h2>Introducción</h2>
+            <p>Hola, soy Helen Fontalvo, una persona amable y respetuosa, capaz de enseñar y aprender de los demás.</p>
+            <hr>
+        </header>
 
-    <a href="https://www.facebook.com/mario.fontalvo.50309"> faceboock</a>
-    <hr>
-    <h3>pasatiempos</h3>
-    <ul>
-    	<li>documentales y peliculas</li>
-    	<li>jugar futbol</li>
-    	<li>ir a playa</li>
-    </ul>
-    <h3>tareas pendientes</h3>
-    <ol>
-    	<li>hacer aseo</li>
-    	<li>terminar el laboratorio</li>
-    	<li>lavar los platos</li>
-    	<li>organizar la ropa</li>
-    	<li>salir a entrenar</li>
-    </ol>
-    <table border="">
-    	<thead>
-    	<tr>
-    		<th>lunes</th>
-    		<th>martes</th>
-    		<th>miercoles</th>
-    		<th>jueves</th>
-    		<th>viernes</th>
-    		<th>sabado</th>
-    		<th>domingo</th>
-    	</tr>
-        </thead>
-        <tbody>
-        	<tr>
-        	  <td> hacer aseo</td>
-        	  <td>salir a entrenar</td>
-              <td></td>
-              <td>terminar el laboratorio</td>
-              <td></td>
-              <td>lavar los platos</td>
-              <td>organizar la ropa</td>
-        	</tr>
-        </tbody>
-    </table>
+        <section>
+            <h2>Hoja de Vida</h2>
+            <p><strong>Nombre:</strong> Helen Fontalvo</p>
+            <p><strong>Cédula de Ciudadanía:</strong> 1102357819</p>
+            <p><strong>Edad y Nacionalidad:</strong> 36 años, Colombiana</p>
+            <p><strong>Dirección:</strong> Carrera 18A Nº 70-34, Barrio El Socorro, Gaira, Santa Marta</p>
+            <p><strong>Teléfono:</strong> 3247300461</p>
+            <p><strong>Email:</strong> helenfontalvo17@gmail.com</p>
+            <img src="helen.jpeg" alt="Helen Fontalvo" width="10%">
+            <p><a href="https://www.facebook.com/mario.fontalvo.50309" target="_blank">Facebook</a></p>
+        </section>
 
+        <section>
+            <h3>Pasatiempos</h3>
+            <ul>
+                <li>Documentales y películas</li>
+                <li>Jugar fútbol</li>
+                <li>Ir a la playa</li>
+            </ul>
+        </section>
 
-		<form>
-			<h1>formulario de contacto</h1>
-			<label>* nombre:</label>
-			<input type="text" name="nombre" required="">
-			
-			<label>* correo electronico:</label>
-			<input type="email" name="email" required="">
-			<label>* ingrese su contraseña:</label>
-			<input type="password" name="clave" required="">
-			<label>celular:</label>
-			<input type="number" name="cel">
-			<label>* mensaje:</label>
-			<textarea required=""></textarea>
-			<label>* pais:</label>
-			<select>
-				<option selected="">seleccionar un pais</option>
-				<option>colombia</option>
-				<option>brasil</option>
-				<option>chile</option>
+        <section>
+            <h3>Tareas Pendientes</h3>
+            <ol>
+                <li>Hacer aseo</li>
+                <li>Terminar el laboratorio</li>
+                <li>Lavar los platos</li>
+                <li>Organizar la ropa</li>
+                <li>Salir a entrenar</li>
+            </ol>
+        </section>
 
-			</select>
-			<input type="submit" value="enviar">
-			<input type="reset" value="borrar">
-			<p>* campo requerido...</p>
-		</form>
-	</div>
+        <section>
+            <h3>Mi Semana</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Lunes</th>
+                        <th>Martes</th>
+                        <th>Miércoles</th>
+                        <th>Jueves</th>
+                        <th>Viernes</th>
+                        <th>Sábado</th>
+                        <th>Domingo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Hacer aseo</td>
+                        <td>Salir a entrenar</td>
+                        <td></td>
+                        <td>Terminar el laboratorio</td>
+                        <td></td>
+                        <td>Lavar los platos</td>
+                        <td>Organizar la ropa</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
+        <section>
+            <h1>Formulario de Contacto</h1>
+            <form action="#" method="POST">
+                <label for="nombre">* Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required>
+
+                <label for="email">* Correo Electrónico:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="clave">* Ingrese su Contraseña:</label>
+                <input type="password" id="clave" name="clave" required>
+
+                <label for="cel">Celular:</label>
+                <input type="number" id="cel" name="cel">
+
+                <label for="mensaje">* Mensaje:</label>
+                <textarea id="mensaje" name="mensaje" required></textarea>
+
+                <label for="pais">* País:</label>
+                <select id="pais" name="pais" required>
+                    <option value="">Seleccionar un país</option>
+                    <option value="colombia">Colombia</option>
+                    <option value="brasil">Brasil</option>
+                    <option value="chile">Chile</option>
+                </select>
+
+                <div class="buttons">
+                    <input type="submit" value="Enviar">
+                    <input type="reset" value="Borrar">
+                </div>
+
+                <p>* Campo requerido</p>
+            </form>
+        </section>
+
+    </div>
 
 </body>
 </html>
